[package]
name = "ext-time"
version = "0.3.0"
edition = "2024"
description = "A Rust library that extends the time crate with additional useful methods for time manipulation and formatting"
license = "MIT"
repository = "https://github.com/rain2307/ext-time"
documentation = "https://docs.rs/ext-time"
readme = "README.md"
keywords = ["time", "datetime", "extension", "timezone", "formatting"]
categories = ["date-and-time"]

[dependencies]
thiserror = { version = "2.0.11" }
serde = { version = "1.0.219", features = ["derive"] }
time = { version = "0.3.37", features = [
    "macros",
    "formatting",
    "parsing",
    "serde",
    "local-offset",
] }
